<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RockFlash DevTool</string>
    <string name="status_waiting">Aguardando dispositivo Rockchip</string>
    <string name="status_detected">Dispositivo Rockchip detectado</string>
    <string name="status_no_device">Nenhum dispositivo VID 2207 encontrado</string>
    <string name="scan">Procurar dispositivo</string>
    <string name="request_access">Solicitar acesso USB</string>
    <string name="open_native">Abrir sessão nativa</string>
    <string name="open_armbian_wizard">Assistente Armbian RK322x</string>
    <string name="list_devices">Listar (LD)</string>
    <string name="read_chip">Ler chip (RCI)</string>
    <string name="read_flash_id">Ler Flash ID (RID)</string>
    <string name="read_flash">Ler Flash Info (RFI)</string>
    <string name="read_capability">Ler capacidades (RCB)</string>
    <string name="print_partitions">Partições (PPT)</string>
    <string name="select_image">Selecionar imagem</string>
    <string name="flash_raw">Gravar imagem completa</string>
    <string name="flash_partition">Gravar partição</string>
    <string name="download_loader">Carregar loader (DB)</string>
    <string name="upgrade_loader">Atualizar loader (UL)</string>
    <string name="write_gpt">Gravar GPT</string>
    <string name="write_parameter">Gravar parameter</string>
    <string name="erase_flash">Apagar flash inteira</string>
    <string name="reset_device">Reiniciar dispositivo</string>
    <string name="copy_report">Copiar relatório</string>
    <string name="clear_log">Limpar log</string>
</resources>
